Updated yml config to not publish visx to gallery

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,5 +11,5 @@ build_script:
   - nuget restore -Verbosity quiet
   - msbuild /p:configuration=Release /p:DeployExtension=false /p:ZipPackageCompressionLevel=normal /v:m
 
-after_test:
-  - ps: Vsix-PushArtifacts | Vsix-PublishToGallery
+#after_test:
+#  - ps: Vsix-PushArtifacts | Vsix-PublishToGallery
