--- a/src/FixMixedTabs/FixMIxedTabsDev17/FixMIxedTabsDev17.csproj
+++ b/src/FixMixedTabs/FixMIxedTabsDev17/FixMIxedTabsDev17.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\ProPowerTools.Open.targets" />
   <PropertyGroup>
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{0E19E9EA-6AF0-48FF-BAB7-B1EB6754239B}</ProjectGuid>
+    <ProjectGuid>{07CCB0B9-F26F-44F2-A4A5-3A671779F4DC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FixMixedTabs</RootNamespace>
@@ -23,7 +23,12 @@
     <DeployExtension>true</DeployExtension>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.9.31025.194" />
+    <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.0.0-preview-1-31209-1111" />
+    <PackageReference Include="Microsoft.VSSDK.BuildTools">
+      <Version>17.0.63-dev17-g3f11f5ab</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
